--- a/fruitable/web/templates/layout/navbar.html
+++ b/fruitable/web/templates/layout/navbar.html
@@ -23,7 +23,7 @@
               <div class="navbar-nav mx-auto">
                   <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
                   <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
-                  <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
+                  <a href="{% url 'product_detail' %}" class="nav-item nav-link">Shop Detail</a>
                   <div class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                       <div class="dropdown-menu m-0 bg-secondary rounded-0">
