--- a/fruitable/web/templates/layout/navbar.html
+++ b/fruitable/web/templates/layout/navbar.html
@@ -27,7 +27,7 @@
                   <div class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                       <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                          <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                          <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonial</a>
                       </div>
                   </div>
                   <a href="contact.html" class="nav-item nav-link">Contact</a>
