created query sets which get data from database

--- a/fruitable/web/static/css/style.css
+++ b/fruitable/web/static/css/style.css
@@ -303,6 +303,7 @@
 }
 .fruite .fruite-item:hover {
     box-shadow: 0 0 55px rgba(0, 0, 0, 0.4);
+    height: fit-content;
 }
 
 .fruite .fruite-item .fruite-img {
