--- a/fruitable/web/templates/shop-detail.html
+++ b/fruitable/web/templates/shop-detail.html
@@ -384,7 +384,7 @@
                 </div>
                 <h1 class="fw-bold mb-0">Related products</h1>
                 <div class="vesitable">
-                    <div class="owl-carousel vegetable-carousel justify-content-center">
+                    <div class="owl-carousel vegetable-carousel">
                         {% for related_product in related_products %}
                             <a href="{% url 'product_detail' related_product.id %}">
                                 <div class="border border-primary rounded position-relative vesitable-item">
@@ -396,7 +396,7 @@
                                         <h4>{{ related_product.product_name }}</h4>
                                         <p>{{ related_product.product_description|truncatewords:10 }}</p>
                                         <div class="d-flex justify-content-center flex-lg-wrap">
-                                            <p class="text-dark fs-5 fw-bold">{{ related_product.product_price }} / kg</p>
+                                            <p class="text-dark fs-5 fw-bold">Ksh. {{ related_product.product_price }} / kg</p>
                                             <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                         </div>
                                     </div>
