created Cart and Cart item table

--- a/fruitable/web/templates/layout/navbar.html
+++ b/fruitable/web/templates/layout/navbar.html
@@ -24,7 +24,7 @@
                   <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
                   <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
                   <div class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">More</a>
                       <div class="dropdown-menu m-0 bg-secondary rounded-0">
                           <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonial</a>
                       </div>
