--- a/fruitable/web/templates/shop.html
+++ b/fruitable/web/templates/shop.html
@@ -135,8 +135,8 @@
                                                     <i class="fa fa-star"></i>
                                                 </div>
                                                 <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 $</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 $</h5>
+                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
+                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
                                                 </div>
                                             </div>
                                         </div>
@@ -154,8 +154,8 @@
                                                     <i class="fa fa-star"></i>
                                                 </div>
                                                 <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 $</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 $</h5>
+                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
+                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
                                                 </div>
                                             </div>
                                         </div>
@@ -173,13 +173,13 @@
                                                     <i class="fa fa-star"></i>
                                                 </div>
                                                 <div class="d-flex mb-2">
-                                                    <h5 class="fw-bold me-2">2.99 $</h5>
-                                                    <h5 class="text-danger text-decoration-line-through">4.11 $</h5>
+                                                    <h5 class="fw-bold me-2">2.99 Sh</h5>
+                                                    <h5 class="text-danger text-decoration-line-through">4.11 Sh</h5>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="d-flex justify-content-center my-4">
-                                            <a href="#" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">Vew More</a>
+                                            <a href="#" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">View More</a>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
@@ -208,7 +208,7 @@
                                                         <h4>{{ product.product_name }}</h4>
                                                         <p>{{ product.product_description|truncatewords:10 }}</p>
                                                         <div class="d-flex flex-column align-items-center">
-                                                            <p class="text-dark fs-5 fw-bold mb-3">Ksh{{ product.product_price }} / kg</p>
+                                                            <p class="text-dark fs-5 fw-bold mb-3">Sh{{ product.product_price }} / kg</p>
                                                             <a href="{% url 'cart_add' product.id %}" class="btn border border-secondary rounded-pill px-3 text-primary">
                                                                 <i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart
                                                             </a>
